# Crystalline-EVM

./: .gitmodules  README.md
core/: orion_latticezk.h  orion_latticezk.m  orion_rns.m
docs/: BENCHMARKS.md  CONSTRAINT_MODES.md  LABRADOR_FORMAL_VERIFICATION.md  ZKEVM_SECURITY_PLAN.md
lattice-evm/: Cargo.toml  LICENSE  README.md
lattice-evm/benches/: ane_benchmark.rs  block_benchmark.rs  comprehensive_benchmark.rs  debug_failed_contracts.rs  mode_comparison_benchmark.rs  optimized_block_benchmark.rs  unified_proving_benchmark.rs
lattice-evm/contracts/script/: DeployRelay.s.sol  RelayerScript.s.sol  VerifyProof.s.sol
lattice-evm/contracts/verifier/: BlockHashRelay.sol  Plonky3NovaVerifier.sol
lattice-evm/docs/: PERFORMANCE-OPTIMIZATIONS.md  TECHNICAL-DEEP-DIVE.md  zkEVM-BEGINNERS-GUIDE.md
lattice-evm/scripts/: berachain_prover.sh
lattice-evm/src/: lib.rs
lattice-evm/src/air/: constraints.rs  mod.rs  polynomial_encoder.rs
lattice-evm/src/crypto/: batch_merkle.rs  blake3.rs  keccak.rs  lattice_crypto.rs  mod.rs  multilinear_pcs.rs  poseidon2.rs  smt.rs
lattice-evm/src/crypto/lattice_crypto/: benchmarks.rs  dilithium_merkle.rs  lattice_fiat_shamir.rs  lattice_merkle.rs
lattice-evm/src/evm/: common_trace.rs  eth.rs  eth_rpc.rs  full_evm.rs  mod.rs  opcodes.rs
lattice-evm/src/prover/: full_prove.rs  mod.rs  parallel_prove.rs  recursive_prove.rs  resource_monitor.rs  snark_enhanced_prover.rs  snark_prover.rs
lattice-evm/src/verifier/: mod.rs  snark_verifier.rs
lattice-evm/tests/: eth_transfer_test.rs
orion-backend/: Cargo.toml  README.md
orion-backend/examples/: simple.rs
orion-backend/src/: acir_parser.rs  brillig_runner.rs  error.rs  labrador.rs  lattice_ops.rs  lib.rs  mock_orion_sys.rs  opcode_handler.rs
orion-backend/sys/orion-sys/: Cargo.toml  build.rs
orion-backend/sys/orion-sys/src/: lib.rs  orion_latticezk_shim.c
orion-backend/testdata/: brillig_arith.acir  crt_test.acir  matvec_2x2.acir  matvec_4x4.acir  multi_op.acir  ntt_test.acir  simple_assert.acir  simple_matvec.acir
orion-backend/tests/: acir_parser_tests.rs  brillig_runner_tests.rs  integration_circuit.rs  integration_matvec.rs  lattice_ops_tests.rs  opcode_handler_tests.rs
orion-backend/tests/disabled/: labrador_tests.rs
