[package]
name = "lattice-evm"
version = "0.1.0"
edition = "2021"
description = "Lattice-native zkEVM using ANE-accelerated proving"
authors = ["Crystalline Team"]

[dependencies]
orion-backend = { path = "../orion-backend" }
orion-sys = { path = "../orion-backend/sys/orion-sys" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
hex = "0.4"
serde_json = "1.0"
rayon = "1.8"
revm = { version = "3.0", features = ["std"] }
ethereum-types = "0.14"
getrandom = "0.2"

[features]
lattice-crypto-exploration = []

[dev-dependencies]
tempfile = "3.10"

[[bench]]
name = "block_benchmark"
harness = false

[[bench]]
name = "ane_benchmark"
harness = false

[[bench]]
name = "optimized_block_benchmark"
harness = false

[[bench]]
name = "unified_proving_benchmark"
harness = false

[[bench]]
name = "comprehensive_benchmark"
harness = false

[[bin]]
name = "mode_comparison"
path = "benches/mode_comparison_benchmark.rs"

[[bin]]
name = "lattice-evm-prover"
path = "src/bin/prover.rs"

[[bin]]
name = "lattice-evm-verifier"
path = "src/bin/verifier.rs"

[[bin]]
name = "nova_ivc_benchmark"
path = "src/bin/nova_ivc_benchmark.rs"

[[bin]]
name = "revm_block_prover"
path = "src/bin/revm_block_prover.rs"

[[bin]]
name = "trace_exporter"
path = "src/bin/trace_exporter.rs"

[[bin]]
name = "trace_benchmark"
path = "src/bin/trace_benchmark.rs"

[[bin]]
name = "cross_prover_benchmark"
path = "src/bin/cross_prover_benchmark.rs"

[[bin]]
name = "lattice_merkle_benchmark"
path = "src/bin/lattice_merkle_benchmark.rs"
