[package]
name = "orion-backend"
version = "0.1.0"
edition = "2021"

[features]
default = []
mock = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
thiserror = "1.0"
tracing = "0.1"

[dependencies.orion-sys]
path = "sys/orion-sys"

[dev-dependencies]
# Tests use the mock FFI which is defined in tests/mock_orion_sys.rs
# and included directly into test files

[[example]]
name = "simple"
path = "examples/simple.rs"
